--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -2172,7 +2172,7 @@
   "advancements.goety.bear_servant_kill_baby_villager.description": "让你的熊仆从去杀死一个幼年村民。",
   "advancements.goety.servant_kill_vizier.title": "农民起义",
   "advancements.goety.servant_kill_vizier.description": "让你的仆从击败灾厄宰相.",
-  "advancements.goety.convert_black_beast.title": "The Big Bad Wolf",
+  "advancements.goety.convert_black_beast.title": "灰大狼",
   "advancements.goety.convert_black_beast.description": "将黑狼转化为暗兽.",
   "painting.goety.fallen_kingdom.author": "Captain Sparklez",
   "painting.goety.fallen_kingdom.title": "Fallen Kingdom",
@@ -2191,12 +2191,12 @@
   "painting.goety.wicker.author": "Thomas Pennant",
   "painting.goety.wicker.title": "Wicker Man",
   "block.goety.rusty_iron_grate": "Rusty Iron Grate",
-  "item.goety.ignite_focus": "Ignite Focus",
-  "item.goety.ignite_focus.info": "Sets a target or block on fire on touch.",
-  "block.goety.snowy_jade_tiles": "Snowy Jade Tiles",
-  "block.goety.snowy_jade_slab": "Snowy Jade Slab",
-  "block.goety.snowy_jade_stairs": "Snowy Jade Stairs",
-  "block.goety.snowy_siltstone_pillar": "Snowy Siltstone Pillar",
+  "item.goety.ignite_focus": "引燃聚晶",
+  "item.goety.ignite_focus.info": "点燃你准心所指的方块或生物。",
+  "block.goety.snowy_jade_tiles": "覆雪玉瓷砖",
+  "block.goety.snowy_jade_slab": "覆雪玉台阶",
+  "block.goety.snowy_jade_stairs": "覆雪玉楼梯",
+  "block.goety.snowy_siltstone_pillar": "覆雪粉砂岩柱",
   "painting.goety.capstone.author": "Azanor",
   "painting.goety.capstone.title": "Capstone Room",
   "painting.goety.eldritch.author": "Unknown",
