Added Blackguard and fixed some bugs.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -100,6 +100,7 @@
   "entity.goety.drowned_servant":"Drowned Servant",
   "entity.goety.frozen_zombie_servant":"Frozen Zombie Servant",
   "entity.goety.jungle_zombie_servant":"Jungle Zombie Servant",
+  "entity.goety.blackguard_servant":"Blackguard Servant",
   "entity.goety.skeleton_servant":"Skeleton Servant",
   "entity.goety.stray_servant":"Stray Servant",
   "entity.goety.wither_skeleton_servant":"Wither Skeleton Servant",
@@ -281,6 +282,7 @@
   "item.goety.frozen_zombie_servant_spawn_egg": "Frozen Zombie Servant Spawn Egg",
   "item.goety.jungle_zombie_servant_spawn_egg": "Jungle Zombie Servant Spawn Egg",
   "item.goety.zombie_vindicator_servant_spawn_egg": "Zombie Vindicator Servant Spawn Egg",
+  "item.goety.blackguard_servant_spawn_egg": "Blackguard Servant Spawn Egg",
   "item.goety.skeleton_servant_spawn_egg": "Skeleton Servant Spawn Egg",
   "item.goety.stray_servant_spawn_egg": "Stray Servant Spawn Egg",
   "item.goety.wither_skeleton_servant_spawn_egg": "Wither Skeleton Servant Spawn Egg",
@@ -566,6 +568,8 @@
   "item.goety.spooky_focus.info": "Summons Wraith Servants. Cast crouching will summon the caster's servants towards them.",
   "item.goety.vanguard_focus": "Vanguard Focus",
   "item.goety.vanguard_focus.info": "Summons Vanguard Servants. Cast crouching will summon the caster's servants towards them.",
+  "item.goety.blackguard_focus": "Blackguard Focus",
+  "item.goety.blackguard_focus.info": "Summons Blackguard Servants. Cast crouching will summon the caster's servants towards them.",
   "item.goety.skull_focus": "Skull Focus",
   "item.goety.skull_focus.info": "Summons Haunted Skulls. Cast crouching will summon the caster's skulls towards them.",
   "item.goety.wither_skull_focus": "Wither Skull Focus",
@@ -1663,6 +1667,10 @@
   "subtitle.goety.jungle_zombie_step": "Jungle Zombie steps",
   "subtitle.goety.jungle_zombie_death": "Jungle Zombie dies",
 
+  "subtitle.goety.blackguard_pre_attack": "Blackguard growls",
+  "subtitle.goety.blackguard_smash": "Mace smash",
+  "subtitle.goety.blackguard_step": "Blackguard stomps",
+
   "subtitle.goety.mossy_skeleton_ambient": "Mossy Skeleton rattles",
   "subtitle.goety.mossy_skeleton_hurt": "Mossy Skeleton hurts",
   "subtitle.goety.mossy_skeleton_shoot": "Mossy Skeleton shoots",
@@ -1910,6 +1918,8 @@
   "subtitle.goety.updraft_blast": "Updraft Blast",
   "subtitle.goety.zap": "Thunder Zap",
   "subtitle.goety.rumble": "Rumbling",
+  "subtitle.goety.plate": "Metal hit",
+  "subtitle.goety.plate_drop": "Metal drop",
   "subtitle.goety.tooth_spawn": "Tooth appears",
   "subtitle.goety.impale": "Impale",
   "subtitle.goety.ice_spike_cast": "Casts Spell",
