Fixed some bugs and updated translations

--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -2204,7 +2204,7 @@
   "item.goety.hostile_black_wolf_spawn_egg": "敌对黑狼刷怪蛋",
   "item.goety.wight_spawn_egg": "孤魂尸鬼刷怪蛋",
   "item.goety.carrion_maggot_spawn_egg": "腐尸蛆虫刷怪蛋",
-  "item.goety.hungry_dagger": "饥饿匕首刷怪蛋",
+  "item.goety.hungry_dagger": "饥饿匕首",
   "item.goety.shadow_essence": "暗影精粹",
   "item.goety.quick_growing_seed": "速生之种",
   "item.goety.poison_quill_seed": "毒刺藤种",
