Fixed some bugs and updated translations

--- a/src/main/resources/assets/goety/lang/ja_jp.json
+++ b/src/main/resources/assets/goety/lang/ja_jp.json
@@ -190,7 +190,7 @@
 
   "item.goety.apostle_spawn_egg": "アパスル(使徒)のスポーンエッグ",
   "item.goety.warlock_spawn_egg": "ウォーロックのスポーンエッグ",
-  "item.goety.crone_spawn_egg": "クローン(クローン)のスポーンエッグ",
+  "item.goety.crone_spawn_egg": "クローンのスポーンエッグ",
   "item.goety.wraith_spawn_egg": "レイスのスポーンエッグ",
   "item.goety.border_wraith_spawn_egg": "ボーダーレイスのスポーンエッグ",
   "item.goety.cairn_necromancer_spawn_egg": "ケルンネクロマンサーのスポーンエッグ",
@@ -228,7 +228,7 @@
   "item.goety.malghast_spawn_egg": "マルガストのスポーンエッグ",
 
   "item.goety.dark_wand": "闇の杖",
-  "item.goety.ominous_staff": "不気味な杖",
+  "item.goety.ominous_staff": "邪悪な杖",
   "item.goety.necro_staff": "ネクロの杖",
   "item.goety.wind_staff": "風の杖",
   "item.goety.storm_staff": "嵐の杖",
@@ -308,15 +308,15 @@
   "item.goety.feet_of_frog": "カエルの足",
   "item.goety.cooked_feet_of_frog": "調理されたカエルの足",
 
-  "item.goety.soul_transfer": "ジェム転送装置",
+  "item.goety.soul_transfer": "ソウルトランスファー",
   "item.goety.flame_capture": "フレイムキャプチャー",
-  "item.goety.snap_fungus": "スナップキノコ",
-  "item.goety.blast_fungus": "ブラストキノコ",
-  "item.goety.berserk_fungus": "ベルセルクキノコ",
+  "item.goety.snap_fungus": "スナップ菌",
+  "item.goety.blast_fungus": "ブラスト菌",
+  "item.goety.berserk_fungus": "ベルセルク菌",
   "item.goety.wartful_egg": "いぼだらけの卵",
   "item.goety.ill_bomb": "イルボム",
   "item.goety.soul_jar": "ソウルの瓶",
-  "item.goety.refuse_bottle": "廃棄物のボトル",
+  "item.goety.refuse_bottle": "廃棄物の瓶",
 
   "item.goety.grimoire_of_grudges": "遺恨のグリモワール",
   "item.goety.grimoire_of_goodwill": "善意のグリモワール",
@@ -406,13 +406,13 @@
   "item.goety.biting_focus": "牙のフォーカス",
   "item.goety.biting_focus.info": "術者の前に魔法の牙の列を召喚します。しゃがむと術者の周囲に牙を召喚します。",
   "item.goety.rotting_focus": "腐りし者のフォーカス",
-  "item.goety.rotting_focus.info": "ゾンビの従者を召喚します。しゃがむと、従者が彼らに向かって召喚されます。",
+  "item.goety.rotting_focus.info": "ゾンビの従者を召喚します。しゃがむと、すでにいる従者がプレイヤーの元へ行きます。",
   "item.goety.osseous_focus": "骨性のフォーカス",
-  "item.goety.osseous_focus.info": "スケルトンの従者を召喚します。しゃがむと、従者が彼らに向かって召喚されます。",
+  "item.goety.osseous_focus.info": "スケルトンの従者を召喚します。しゃがむと、すでにいる従者がプレイヤーの元へ行きます。",
   "item.goety.spooky_focus": "不気味なフォーカス",
-  "item.goety.spooky_focus.info": "レイスの従者を召喚します。しゃがむと、従者が彼らに向かって召喚されます。",
+  "item.goety.spooky_focus.info": "レイスの従者を召喚します。しゃがむと、すでにいる従者がプレイヤーの元へ行きます。",
   "item.goety.vanguard_focus": "ヴァンガードのフォーカス",
-  "item.goety.vanguard_focus.info": "ヴァンガードの従者を召喚します。しゃがむと、従者が彼らに向かって召喚されます。",
+  "item.goety.vanguard_focus.info": "ヴァンガードの従者を召喚します。しゃがむと、すでにいる従者がプレイヤーの元へ行きます。",
   "item.goety.skull_focus": "スカルのフォーカス",
   "item.goety.skull_focus.info": "ホーンテッドスカルを召喚します。しゃがむと、スカルが彼らに向かって召喚されます。",
   "item.goety.wither_skull_focus": "ウィザースカルのフォーカス",
@@ -1013,7 +1013,7 @@
   "spell.goety.none": "§e無属性§e",
   "spell.goety.necromancy": "§2ネクロマンシー§2",
   "spell.goety.nether": "§4ネザー§4",
-  "spell.goety.ill": "§e無属性§e",
+  "spell.goety.ill": "§e無属性(邪悪)§e",
   "spell.goety.frost": "§9凍結§9",
   "spell.goety.geomancy": "§7ジオマンシー§7",
   "spell.goety.wind": "§b風§b",
@@ -1905,14 +1905,14 @@
   "item.goety.border_wraith_servant_spawn_egg": "ボーダーレイスの従者のスポーンエッグ",
   "item.goety.mini_ghast_spawn_egg": "ミニガストのスポーンエッグ",
   "item.goety.blaze_servant_spawn_egg": "ブレイズの従者のスポーンエッグ",
-  "item.goety.icy_spider_servant_spawn_egg": "氷のクモのスポーンエッグ",
+  "item.goety.icy_spider_servant_spawn_egg": "氷のクモの従者のスポーンエッグ",
   "item.goety.inferno_spawn_egg": "インフェルノのスポーンエッグ",
   "item.goety.wither_necromancer_spawn_egg": "ウィザーネクロマンサーのスポーンエッグ",
   "item.goety.nether_staff": "ネザーの杖",
   "item.goety.blazing_horn": "燃える角笛",
   "item.goety.withered_manuscript": "枯れた原稿",
   "item.goety.bygone_scroll": "旧事のスクロール",
-  "item.goety.blazing_focus": "燃え上がるのフォーカス",
+  "item.goety.blazing_focus": "ブレイズのフォーカス",
   "item.goety.blazing_focus.info": "ブレイズの従者を召喚します。しゃがむと、キャストの従者が彼らに向かって召喚されます。",
   "item.goety.quaking_focus": "地響きのフォーカス",
   "item.goety.quaking_focus.info": "術者の目の前に地響きを放ち、味方以外のモブにダメージを与えて投げ飛ばす。しゃがんで発動させると、術者の周囲で地響きします。",
@@ -2018,7 +2018,7 @@
   "item.goety.nether_robe_warped": "ネザーローブ",
   "item.goety.hunting_focus": "狩猟のフォーカス",
   "item.goety.hunting_focus.info": "ブラックウルフを召喚します。 しゃがむと、キャストの従者が彼らに向かって召喚されます。",
-  "item.goety.mauling_focus": "バッシングのフォーカス",
+  "item.goety.mauling_focus": "猛獣のフォーカス",
   "item.goety.mauling_focus.info": "熊の従者を召喚します。しゃがむと、キャストの従者が彼らに向かって召喚されます。",
   "block.goety.shade_gravestone": "シェードの墓石",
   "block.goety.blazing_cage": "燃える檻",
@@ -2205,7 +2205,7 @@
   "painting.goety.torment.title": "Torment",
   "painting.goety.wicker.author": "Thomas Pennant",
   "painting.goety.wicker.title": "Wicker Man",
-  "block.goety.rusty_iron_grate": "錆びた鉄格子",
+  "block.goety.rusty_iron_grate": "錆びた格子ブロック",
   "item.goety.ignite_focus": "発火のフォーカス",
   "item.goety.ignite_focus.info": "ターゲットまたはブロックに火をつけます。",
   "block.goety.snowy_jade_tiles": "雪の翡翠タイル",
