--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -227,6 +227,7 @@
   "entity.goety.pyroclast":"Pyroclast",
   "entity.goety.magma_bomb":"Magma Bomb",
   "entity.goety.web_shot":"Web Shot",
+  "entity.goety.scream":"Scream",
   "entity.goety.entangle_vines":"Entangle Vines",
   "entity.goety.spider_web":"Spider Web",
   "entity.goety.fire_tornado":"Flaming Tornado",
@@ -607,7 +608,7 @@
   "item.goety.eruption_focus": "Eruption Focus",
   "item.goety.eruption_focus.info": "Summons a small volcano at a location which will shoot several flaming rocks at the sky.",
   "item.goety.illusion_focus": "Mirror Focus",
-  "item.goety.illusion_focus.info": "Summons Dopplegangers of the caster. Cast crouching will dismiss all allied Dopplegangers.",
+  "item.goety.illusion_focus.info": "Summons Doppelgangers of the caster. Cast crouching will dismiss all allied Dopplegangers.",
   "item.goety.feast_focus": "Feasting Focus",
   "item.goety.feast_focus.info": "Summons a magic Fang on any nearby mob or player that's not the caster.",
   "item.goety.teeth_focus": "Teeth Focus",
