Lots of fixes and some QoLs.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -607,7 +607,7 @@
   "item.goety.eruption_focus": "Eruption Focus",
   "item.goety.eruption_focus.info": "Summons a small volcano at a location which will shoot several flaming rocks at the sky.",
   "item.goety.illusion_focus": "Mirror Focus",
-  "item.goety.illusion_focus.info": "Summons Dopplegangers of the caster. Cast crouching will dismiss all allied Dopplegangers.",
+  "item.goety.illusion_focus.info": "Summons Doppelgangers of the caster. Cast crouching will dismiss all allied Dopplegangers.",
   "item.goety.feast_focus": "Feasting Focus",
   "item.goety.feast_focus.info": "Summons a magic Fang on any nearby mob or player that's not the caster.",
   "item.goety.teeth_focus": "Teeth Focus",
