术语一致性检查（地狱疣 -> 下界疣）

--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -313,7 +313,7 @@
   "item.goety.snap_fungus": "砰砰菌团",
   "item.goety.blast_fungus": "爆裂菌团",
   "item.goety.berserk_fungus": "狂暴菌团",
-  "item.goety.wartful_egg": "地狱疣蛋",
+  "item.goety.wartful_egg": "下界疣蛋",
   "item.goety.ill_bomb": "恶意炸弹",
   "item.goety.soul_jar": "灵魂罐",
   "item.goety.refuse_bottle": "拒绝之瓶",
@@ -976,7 +976,7 @@
   "info.goety.wind_robe_discount": "减半烈风法术的灵魂消耗。.",
   "info.goety.witch_robe": "+%s%% 魔法伤害抗性.",
   "info.goety.witch_robe_brew": "“按 %s 用以打开女巫袍内部酿造台.",
-  "info.goety.warlock_garment": "被负面效果影响时自动使用地狱疣蛋.",
+  "info.goety.warlock_garment": "被负面效果影响时自动使用下界疣蛋.",
   "info.goety.warlock_robe": "+%s%% 魔法伤害抗性.",
   "info.goety.ring_of_want": "当被附魔渴望时，用呼吸聚晶法术杀死敌人会增加战利品掉落，就像抢夺那样.",
   "info.goety.ring_of_the_dragon": "增强呼吸聚晶的威力.",
