Translated and sorted the new text in zh_cn.json.

--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -461,7 +461,7 @@
   "item.goety.snap_fungus": "啪啪菌团",
   "item.goety.blast_fungus": "爆破菌团",
   "item.goety.berserk_fungus": "狂暴菌团",
-  "item.goety.wartful_egg": "地狱疣蛋",
+  "item.goety.wartful_egg": "下界疣蛋",
   "item.goety.quick_growing_seed": "速生之种",
   "item.goety.poison_quill_seed": "毒刺藤种",
   "item.goety.ill_bomb": "恶意炸弹",
@@ -1368,7 +1368,7 @@
   "info.goety.storm_robe_discount": "风暴法术的灵魂消耗减半。",
   "info.goety.witch_robe": "+%s%% 魔法伤害抗性.",
   "info.goety.witch_robe_brew": "“按 %s 用以打开女巫袍内部酿造台.",
-  "info.goety.warlock_garment": "被负面效果影响时自动使用地狱疣蛋.",
+  "info.goety.warlock_garment": "被负面效果影响时自动使用下界疣蛋.",
   "info.goety.warlock_robe": "+%s%% 魔法伤害抗性.",
   "info.goety.nether_robe": "+%s%% 火焰伤害抗性..允许下界仆从使用灵魂能量治疗自己。",
   "info.goety.nether_robe_discount": "减半下界法术的灵魂消耗。",
